changes made for Bug 11159 (Show/Hide behaviour of forms not as per the XML used. )
SVN-Revision: 17582